@@ -1,7 +1,9 @@
 1.3.1
 
-Bug Fix
-- Fixed critical error for new Asgard installations that lack an existing Config.groovy file
+Bug Fixes
+- Fixed startup error for new Asgard installations that lack an existing Config.groovy file
+- Fixed startup error for AWS accounts that don't yet have an asgard SWF domain
+
 
 1.3
 
